tests/NormalTests/paczka1/small_fuzzy/94779146.err
Error in line 7: S883 A320 46,7
Error in line 8: Iu34q A964 39,1
Error in line 11: Iu34q A875 87,3
